# NOTES

./: OE_packages.txt  README.md  create_venv.txt  docker.txt  git commands.txt  github_key.txt
aws/: Dockerfile  aws_notes.txt  pyproject.toml
