[tool.poetry]
name = "previews_cloud_docker"
version = "1.0.0"
description = ""
authors = []
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
numpy = "^2.2.5"
fastapi = "^0.115.12"
torch = { version = "2.6.0", source = "pytorch-cpu" }
torchvision = { version = "^0.21.0", source = "pytorch-cpu" }
orbital-vault = "^2.0.7"
customer-database = "^2.7.0"
pimsys-regions = "^2.1.3"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority="supplemental"

[[tool.poetry.source]]
name = "aws"
url = "https://oe-pypi-domain-381492141243.d.codeartifact.eu-central-1.amazonaws.com/pypi/oe-pypi/simple/"
priority = "supplemental"
